--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.password=Hayal1221.
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
