--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^6.22.1",
+    "axios": "^1.6.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
